@@ -1,5 +1,9 @@
 2007-12-23  Olav Vitters  <olav@bkor.dhs.org>
 
+	* smoketesting/convert-to-tarballs.py: Use subprocess, not popen.
+
+2007-12-23  Olav Vitters  <olav@bkor.dhs.org>
+
 	* smoketesting/convert-to-tarballs.py: Try to automatically determine
 	the tarball location and moduleset. Now the script should only require
 	a version to be specified.
